[tool.poetry]
name = "lo0dns"
version = "0.1.0"
description = ""
authors = ["Leigh Brenecki <l@leigh.net.au>"]

[tool.poetry.dependencies]
python = "^3.8"
twisted = "^20.3.0"
cityhash = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
